cd/LALR2/y.output
Grammar

    0 $accept: S $end

    1 S: E

    2 E: E '+' E
    3  | E '-' E
    4  | E '*' E
    5  | E '/' E
    6  | '-' E
    7  | F

    8 F: '(' E ')'
    9  | NUMBER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 4
'+' (43) 2
'-' (45) 3 6
'/' (47) 5
error (256)
NUMBER (258) 9


Nonterminals, with rules where they appear

$accept (10)
    on left: 0
S (11)
    on left: 1, on right: 0
E (12)
    on left: 2 3 4 5 6 7, on right: 1 2 3 4 5 6 8
F (13)
    on left: 8 9, on right: 7


state 0

    0 $accept: . S $end

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    S  go to state 4
    E  go to state 5
    F  go to state 6


state 1

    9 F: NUMBER .

    $default  reduce using rule 9 (F)


state 2

    6 E: '-' . E

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 7
    F  go to state 6


state 3

    8 F: '(' . E ')'

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 8
    F  go to state 6


state 4

    0 $accept: S . $end

    $end  shift, and go to state 9


state 5

    1 S: E .
    2 E: E . '+' E
    3  | E . '-' E
    4  | E . '*' E
    5  | E . '/' E

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 1 (S)


state 6

    7 E: F .

    $default  reduce using rule 7 (E)


state 7

    2 E: E . '+' E
    3  | E . '-' E
    4  | E . '*' E
    5  | E . '/' E
    6  | '-' E .

    $default  reduce using rule 6 (E)


state 8

    2 E: E . '+' E
    3  | E . '-' E
    4  | E . '*' E
    5  | E . '/' E
    8 F: '(' E . ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    '*'  shift, and go to state 12
    '/'  shift, and go to state 13
    ')'  shift, and go to state 14


state 9

    0 $accept: S $end .

    $default  accept


state 10

    2 E: E '+' . E

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 15
    F  go to state 6


state 11

    3 E: E '-' . E

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 16
    F  go to state 6


state 12

    4 E: E '*' . E

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 17
    F  go to state 6


state 13

    5 E: E '/' . E

    NUMBER  shift, and go to state 1
    '-'     shift, and go to state 2
    '('     shift, and go to state 3

    E  go to state 18
    F  go to state 6


state 14

    8 F: '(' E ')' .

    $default  reduce using rule 8 (F)


state 15

    2 E: E . '+' E
    2  | E '+' E .
    3  | E . '-' E
    4  | E . '*' E
    5  | E . '/' E

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 2 (E)


state 16

    2 E: E . '+' E
    3  | E . '-' E
    3  | E '-' E .
    4  | E . '*' E
    5  | E . '/' E

    '*'  shift, and go to state 12
    '/'  shift, and go to state 13

    $default  reduce using rule 3 (E)


state 17

    2 E: E . '+' E
    3  | E . '-' E
    4  | E . '*' E
    4  | E '*' E .
    5  | E . '/' E

    $default  reduce using rule 4 (E)


state 18

    2 E: E . '+' E
    3  | E . '-' E
    4  | E . '*' E
    5  | E . '/' E
    5  | E '/' E .

    $default  reduce using rule 5 (E)
